# Trabalho-CG

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Forma.cpp  Forma.h  Ponto.cpp  Ponto.h  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmakelists.txt  engine.sln  engine.vcxproj  engine.vcxproj.filters  generator  generator.cpp  plano.3d  prepareDemoScene.sh
Fase1/: CMakeLists.txt
Fase1/engine/: Camera.cpp  Parser.cpp  Point.cpp  Shape.cpp
Fase1/files/: exemplo.xml
Fase1/files/test_files_phase_1/: test_1_1.xml
Fase1/gerador/: Shape.h  generator.cpp
Fase2/: CMakeLists.txt
Fase2/common/: Point.cpp
Fase2/common/headers/: Point.h
Fase2/engine/: Group.cpp
Fase2/engine/headers/: Group.h  Transformation.h
Fase2/gerador/: generator.cpp
Fase3/: CMakeLists.txt  prepareDemoScene.sh
Fase3/common/: Point.cpp
Fase3/engine/: Parser.cpp  Transformation.cpp
Fase3/gerador/: Bezier.cpp  generator.cpp
Fase4/common/: MatrixOpp.cpp  Point2D.cpp
Fase4/engine/: Camera.cpp  Curve.cpp  Light.cpp  TextureLoader.cpp
Fase4/files/: SolarSystem.xml  box.xml  example.patch  exemplo.xml  house.xml  sphereInv.xml
Fase4/gerador/: generator.cpp
PosEntrega/: README.md
PosEntrega/engine/: Color.cpp  Light.cpp  Parser.cpp  VBOManager.cpp
PosEntrega/files/: SolarSystem.xml  cylinder.xml  foguete.xml  plane.xml  sphere.xml  teste.xml
common/: MatrixOpp.cpp  Point.cpp  Shape.cpp
common/headers/: MatrixOpp.h  Point.h  Shape.h
engine/: Camera.cpp  Color.cpp  Curve.cpp  Forma.cpp  Group.cpp  Model.cpp  Parser.cpp  Ponto.cpp  Shape.cpp  TextureLoader.cpp  Transformation.cpp  engine.cpp
engine.dir/Debug/: engine.exe.recipe  engine.ilk
engine.dir/Release/: engine.exe.recipe
engine/headers/: Camera.h  Color.h  Curve.h  Forma.h  Group.h  Light.h  Model.h  Parser.h  Point.h  Shape.h  TextureLoader.h  Transformation.h
files/: SolarSystem.xml  cone.xml  example1.patch  exemplo.xml  foguete.xml  house.xml  sim.xml  washer.xml
files/test_files_phase_1/: test_1_3.xml  test_1_5.xml
gerador/: Bezier.cpp  Forma.cpp  Point.cpp  Point.h  Shape.cpp  Shape.h  cubo.3d  generator  generator.cpp  plano.3d
gerador/headers/: Bezier.h
(+47 files in other folders)
